--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,12 +8,17 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">34</td><td></td><td></td></tr>
+<tr><th colspan="8">mysuite</th></tr>
+<tr><td><a href="#t0">chrome test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">13,633</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t1">edge test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">39,957</td><td></td><td></td></tr>
+<tr><th>Total</th><th class="num">4</th><th class="num">0</th><th class="num">0</th><th class="num">0</th><th class="num">53,590</th><th colspan="2"></th></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">annotation.b</td><td><a href="#m0">advacedsearch</a></td><td rowspan="1">1684512971706</td><td rowspan="1">1</td></tr><tr class="passedeven"><td><a href="#m1">search</a></td><td rowspan="1">1684512971698</td><td rowspan="1">4</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">mysuite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">chrome test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">parallel.ParamTest</td><td><a href="#m0">testHomePageTitle</a></td><td rowspan="1">1684573780927</td><td rowspan="1">8</td></tr><tr class="passedeven"><td><a href="#m1">testLogo</a></td><td rowspan="1">1684573780880</td><td rowspan="1">43</td></tr></tbody>
+<tbody id="t1"><tr><th colspan="4">edge test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">parallel.ParamTest</td><td><a href="#m2">testHomePageTitle</a></td><td rowspan="1">1684573807215</td><td rowspan="1">10</td></tr><tr class="passedeven"><td><a href="#m3">testLogo</a></td><td rowspan="1">1684573807182</td><td rowspan="1">32</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">annotation.b#advacedsearch</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">annotation.b#search</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>chrome test</h2><h3 id="m0">parallel.ParamTest#testHomePageTitle</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">parallel.ParamTest#testLogo</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>edge test</h2><h3 id="m2">parallel.ParamTest#testHomePageTitle</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">parallel.ParamTest#testLogo</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
