--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,16 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c5ccac">  <td>23/05/19 21:46:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="b.advacedsearch()[pri:2, instance:annotation.b@6b927fb]">advacedsearch</td> 
-  <td>main@2020152163</td>   <td></td> </tr>
-<tr bgcolor="e9adcf">  <td>23/05/19 21:46:11</td>   <td>52</td> <td title="&lt;&lt;a.by()[pri:0, instance:annotation.a@2a798d51]">&lt;&lt;by</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2020152163</td>   <td></td> </tr>
-<tr bgcolor="e9adcf">  <td>23/05/19 21:46:11</td>   <td>-33</td> <td title="&gt;&gt;a.hi()[pri:0, instance:annotation.a@2a798d51]">&gt;&gt;hi</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2020152163</td>   <td></td> </tr>
-<tr bgcolor="c5ccac">  <td>23/05/19 21:46:11</td>   <td>-16</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;b.login()[pri:0, instance:annotation.b@6b927fb]">&gt;&gt;login</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2020152163</td>   <td></td> </tr>
-<tr bgcolor="c5ccac">  <td>23/05/19 21:46:11</td>   <td>3</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;b.logout()[pri:0, instance:annotation.b@6b927fb]">&lt;&lt;logout</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2020152163</td>   <td></td> </tr>
-<tr bgcolor="c5ccac">  <td>23/05/19 21:46:11</td>   <td>-8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="b.search()[pri:1, instance:annotation.b@6b927fb]">search</td> 
-  <td>main@2020152163</td>   <td></td> </tr>
+<tr bgcolor="c5ccac">  <td>23/05/20 14:35:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountDemo.test()[pri:0, instance:parallel.InvocationCountDemo@6a192cfe]">test</td> 
+  <td>main@728885526</td>   <td></td> </tr>
+<tr bgcolor="c5ccac">  <td>23/05/20 14:35:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountDemo.test()[pri:0, instance:parallel.InvocationCountDemo@6a192cfe]">test</td> 
+  <td>main@728885526</td>   <td></td> </tr>
+<tr bgcolor="c5ccac">  <td>23/05/20 14:35:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountDemo.test()[pri:0, instance:parallel.InvocationCountDemo@6a192cfe]">test</td> 
+  <td>main@728885526</td>   <td></td> </tr>
+<tr bgcolor="c5ccac">  <td>23/05/20 14:35:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountDemo.test()[pri:0, instance:parallel.InvocationCountDemo@6a192cfe]">test</td> 
+  <td>main@728885526</td>   <td></td> </tr>
+<tr bgcolor="c5ccac">  <td>23/05/20 14:35:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountDemo.test()[pri:0, instance:parallel.InvocationCountDemo@6a192cfe]">test</td> 
+  <td>main@728885526</td>   <td></td> </tr>
+<tr bgcolor="c5ccac">  <td>23/05/20 14:35:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountDemo.test()[pri:0, instance:parallel.InvocationCountDemo@6a192cfe]">test</td> 
+  <td>main@728885526</td>   <td></td> </tr>
+<tr bgcolor="c5ccac">  <td>23/05/20 14:35:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountDemo.test()[pri:0, instance:parallel.InvocationCountDemo@6a192cfe]">test</td> 
+  <td>main@728885526</td>   <td></td> </tr>
+<tr bgcolor="c5ccac">  <td>23/05/20 14:35:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountDemo.test()[pri:0, instance:parallel.InvocationCountDemo@6a192cfe]">test</td> 
+  <td>main@728885526</td>   <td></td> </tr>
+<tr bgcolor="c5ccac">  <td>23/05/20 14:35:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountDemo.test()[pri:0, instance:parallel.InvocationCountDemo@6a192cfe]">test</td> 
+  <td>main@728885526</td>   <td></td> </tr>
+<tr bgcolor="c5ccac">  <td>23/05/20 14:35:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountDemo.test()[pri:0, instance:parallel.InvocationCountDemo@6a192cfe]">test</td> 
+  <td>main@728885526</td>   <td></td> </tr>
 </table>
