--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,17 +8,19 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">mysuite</th></tr>
-<tr><td><a href="#t0">chrome test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">13,633</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t1">edge test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">39,957</td><td></td><td></td></tr>
-<tr><th>Total</th><th class="num">4</th><th class="num">0</th><th class="num">0</th><th class="num">0</th><th class="num">53,590</th><th colspan="2"></th></tr>
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">9</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">8,205</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">mysuite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">chrome test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">parallel.ParamTest</td><td><a href="#m0">testHomePageTitle</a></td><td rowspan="1">1684573780927</td><td rowspan="1">8</td></tr><tr class="passedeven"><td><a href="#m1">testLogo</a></td><td rowspan="1">1684573780880</td><td rowspan="1">43</td></tr></tbody>
-<tbody id="t1"><tr><th colspan="4">edge test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">parallel.ParamTest</td><td><a href="#m2">testHomePageTitle</a></td><td rowspan="1">1684573807215</td><td rowspan="1">10</td></tr><tr class="passedeven"><td><a href="#m3">testLogo</a></td><td rowspan="1">1684573807182</td><td rowspan="1">32</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="9">Project_cognizant.Test_function</td><td><a href="#m0">car_type</a></td><td rowspan="1">1684780476271</td><td rowspan="1">192</td></tr><tr class="passedeven"><td><a href="#m1">chat</a></td><td rowspan="1">1684780477066</td><td rowspan="1">141</td></tr><tr class="passedeven"><td><a href="#m2">click</a></td><td rowspan="1">1684780476648</td><td rowspan="1">152</td></tr><tr class="passedeven"><td><a href="#m3">colour</a></td><td rowspan="1">1684780476465</td><td rowspan="1">182</td></tr><tr class="passedeven"><td><a href="#m4">help</a></td><td rowspan="1">1684780476961</td><td rowspan="1">104</td></tr><tr class="passedeven"><td><a href="#m5">open_page</a></td><td rowspan="1">1684780475489</td><td rowspan="1">778</td></tr><tr class="passedeven"><td><a href="#m6">sensor</a></td><td rowspan="1">1684780476802</td><td rowspan="1">158</td></tr><tr class="passedeven"><td><a href="#m7">validation</a></td><td rowspan="1">1684780477355</td><td rowspan="1">314</td></tr><tr class="passedeven"><td><a href="#m8">visit</a></td><td rowspan="1">1684780477208</td><td rowspan="1">145</td></tr></tbody>
 </table>
-<h2>chrome test</h2><h3 id="m0">parallel.ParamTest#testHomePageTitle</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">parallel.ParamTest#testLogo</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>edge test</h2><h3 id="m2">parallel.ParamTest#testHomePageTitle</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">parallel.ParamTest#testLogo</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">Project_cognizant.Test_function#car_type</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">Project_cognizant.Test_function#chat</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">Project_cognizant.Test_function#click</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">Project_cognizant.Test_function#colour</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">Project_cognizant.Test_function#help</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">Project_cognizant.Test_function#open_page</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m6">Project_cognizant.Test_function#sensor</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m7">Project_cognizant.Test_function#validation</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m8">Project_cognizant.Test_function#visit</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
