--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,24 +1,26 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c5ccac">  <td>23/05/20 14:35:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountDemo.test()[pri:0, instance:parallel.InvocationCountDemo@6a192cfe]">test</td> 
-  <td>main@728885526</td>   <td></td> </tr>
-<tr bgcolor="c5ccac">  <td>23/05/20 14:35:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountDemo.test()[pri:0, instance:parallel.InvocationCountDemo@6a192cfe]">test</td> 
-  <td>main@728885526</td>   <td></td> </tr>
-<tr bgcolor="c5ccac">  <td>23/05/20 14:35:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountDemo.test()[pri:0, instance:parallel.InvocationCountDemo@6a192cfe]">test</td> 
-  <td>main@728885526</td>   <td></td> </tr>
-<tr bgcolor="c5ccac">  <td>23/05/20 14:35:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountDemo.test()[pri:0, instance:parallel.InvocationCountDemo@6a192cfe]">test</td> 
-  <td>main@728885526</td>   <td></td> </tr>
-<tr bgcolor="c5ccac">  <td>23/05/20 14:35:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountDemo.test()[pri:0, instance:parallel.InvocationCountDemo@6a192cfe]">test</td> 
-  <td>main@728885526</td>   <td></td> </tr>
-<tr bgcolor="c5ccac">  <td>23/05/20 14:35:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountDemo.test()[pri:0, instance:parallel.InvocationCountDemo@6a192cfe]">test</td> 
-  <td>main@728885526</td>   <td></td> </tr>
-<tr bgcolor="c5ccac">  <td>23/05/20 14:35:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountDemo.test()[pri:0, instance:parallel.InvocationCountDemo@6a192cfe]">test</td> 
-  <td>main@728885526</td>   <td></td> </tr>
-<tr bgcolor="c5ccac">  <td>23/05/20 14:35:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountDemo.test()[pri:0, instance:parallel.InvocationCountDemo@6a192cfe]">test</td> 
-  <td>main@728885526</td>   <td></td> </tr>
-<tr bgcolor="c5ccac">  <td>23/05/20 14:35:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountDemo.test()[pri:0, instance:parallel.InvocationCountDemo@6a192cfe]">test</td> 
-  <td>main@728885526</td>   <td></td> </tr>
-<tr bgcolor="c5ccac">  <td>23/05/20 14:35:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountDemo.test()[pri:0, instance:parallel.InvocationCountDemo@6a192cfe]">test</td> 
-  <td>main@728885526</td>   <td></td> </tr>
+<tr bgcolor="c5ccac">  <td>23/05/23 00:04:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_function.car_type()[pri:2, instance:Project_cognizant.Test_function@6379eb]">car_type</td> 
+  <td>main@1362728240</td>   <td></td> </tr>
+<tr bgcolor="c5ccac">  <td>23/05/23 00:04:37</td>   <td>795</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_function.chat()[pri:7, instance:Project_cognizant.Test_function@6379eb]">chat</td> 
+  <td>main@1362728240</td>   <td></td> </tr>
+<tr bgcolor="c5ccac">  <td>23/05/23 00:04:36</td>   <td>377</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_function.click()[pri:4, instance:Project_cognizant.Test_function@6379eb]">click</td> 
+  <td>main@1362728240</td>   <td></td> </tr>
+<tr bgcolor="c5ccac">  <td>23/05/23 00:04:37</td>   <td>1401</td> <td>&nbsp;</td><td title="&lt;&lt;Test_function.close()[pri:0, instance:Project_cognizant.Test_function@6379eb]">&lt;&lt;close</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1362728240</td>   <td></td> </tr>
+<tr bgcolor="c5ccac">  <td>23/05/23 00:04:36</td>   <td>194</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_function.colour()[pri:3, instance:Project_cognizant.Test_function@6379eb]">colour</td> 
+  <td>main@1362728240</td>   <td></td> </tr>
+<tr bgcolor="c5ccac">  <td>23/05/23 00:04:36</td>   <td>690</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_function.help()[pri:6, instance:Project_cognizant.Test_function@6379eb]">help</td> 
+  <td>main@1362728240</td>   <td></td> </tr>
+<tr bgcolor="c5ccac">  <td>23/05/23 00:04:29</td>   <td>-6523</td> <td>&nbsp;</td><td title="&gt;&gt;Test_function.input()[pri:0, instance:Project_cognizant.Test_function@6379eb]">&gt;&gt;input</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1362728240</td>   <td></td> </tr>
+<tr bgcolor="c5ccac">  <td>23/05/23 00:04:35</td>   <td>-782</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_function.open_page()[pri:0, instance:Project_cognizant.Test_function@6379eb]">open_page</td> 
+  <td>main@1362728240</td>   <td></td> </tr>
+<tr bgcolor="c5ccac">  <td>23/05/23 00:04:36</td>   <td>531</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_function.sensor()[pri:5, instance:Project_cognizant.Test_function@6379eb]">sensor</td> 
+  <td>main@1362728240</td>   <td></td> </tr>
+<tr bgcolor="c5ccac">  <td>23/05/23 00:04:37</td>   <td>1084</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_function.validation()[pri:9, instance:Project_cognizant.Test_function@6379eb]">validation</td> 
+  <td>main@1362728240</td>   <td></td> </tr>
+<tr bgcolor="c5ccac">  <td>23/05/23 00:04:37</td>   <td>937</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_function.visit()[pri:8, instance:Project_cognizant.Test_function@6379eb]">visit</td> 
+  <td>main@1362728240</td>   <td></td> </tr>
 </table>
